media/jellyfin.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    run: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        jellyfin: yes
      containers:
      - name: jellyfin
        image: ghcr.io/linuxserver/jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - name: media-volume
          mountPath: "/config"
          subPath: "config/jellyfin"
        - name: media-volume
          mountPath: "/data/tvshows"
          subPath: "library/tv"
        - name: media-volume
          mountPath: "/data/movies"
          subPath: "library/movies"
        - name: dev-vchiq
          mountPath: /dev/vchiq
        securityContext:
          privileged: true
      volumes:
      - name: media-volume
        persistentVolumeClaim:
            claimName: media-volume
      - name: dev-vchiq
        hostPath:
          path: /dev/vchiq
