media/radarr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    run: radarr
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr
        ports:
        - containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: media-volume
          mountPath: "/config"
          subPath: "config/radarr"
        - name: media-volume
          mountPath: "/downloads"
          subPath: "downloads/transmission"
        - name: media-volume
          mountPath: "/movies"
          subPath: "library/movies"
      volumes:
      - name: media-volume
        persistentVolumeClaim:
            claimName: media-volume
