media/sonarr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    run: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr
        ports:
        - containerPort: 8989
          protocol: TCP
        volumeMounts:
        - name: media-volume
          mountPath: "/config"
          subPath: "config/sonarr"
        - name: media-volume
          mountPath: "/downloads"
          subPath: "downloads/transmission"
        - name: media-volume
          mountPath: "/tv"
          subPath: "library/tv"
      volumes:
      - name: media-volume
        persistentVolumeClaim:
            claimName: media-volume
